components/chatbot-0606/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata: 
  labels: 
    app.kubernetes.io/instance: chatbot-0606
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: chatbot-0606 
  name: chatbot-0606
spec:
  port:
    targetPort: 8501
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: chatbot-0606 
    weight: 100 
  wildcardPolicy: None
